Fix logs, fix db connections, change base to postgres, and this application start work, its amazing